Tests running again Proper distribution of test between Unit and integration